# winSearch

./: .editorconfig  .env.development  .env.example  .env.production  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  winsearch-spotlight-plan.md
docs/: phase-1-foundations.md  phase-2-overlay-hotkey.md  phase-3-sqlite-foundation.md  phase-4-file-collector.md  phase-4-start-menu-collector.md
scripts/: bootstrap.ps1
src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_file_records.sql  0003_file_records_fts5.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/collectors/: filesystem.rs  mod.rs  start_menu.rs
src-tauri/src/db/: mod.rs
src/config/: runtime.ts
src/lib/: logger.ts
